--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ serde_json = "1.0"
 
 # Authentication
 jsonwebtoken = "9.0"
+bcrypt = "0.15"
 
 # Utilities
 uuid = { version = "1.0", features = ["v4"] }
@@ -26,15 +27,9 @@ chrono = { version = "0.4", features = ["serde"] }
 anyhow = "1.0"
 thiserror = "1.0"
 
-# HTTP client for auth
-reqwest = { version = "0.11", features = ["json"] }
-
-# Environment variables
-dotenvy = "0.15"
-
 # Logging
 tracing = "0.1"
 tracing-subscriber = "0.3"
 
-# URL encoding
-urlencoding = "2.1"
+# Static file embedding
+rust-embed = "8.5"
